# coreai-torch

./: Externalization.md  README.md  demo_externalize_with_quant.ipynb  pyproject.toml
.github/workflows/: ci.yml
coreai_torch/: __init__.py  _aten_to_core.py  _custom_to_core.py  _utils.py  converter.py  externalize.py
coreai_torch/_compression/: utils.py
docs/coreai-core/tutorials/: construct-a-graph.ipynb  run-an-aimodel.ipynb
docs/getting-started/: quickstart.ipynb
docs/guides/: composite-ops.ipynb  conversion-workflows.ipynb  custom-metal-kernels.ipynb  custom-op-lowering.ipynb  externalization.ipynb
tests/: test_converter.py  test_externalize.py  utils.py
tests/composite_ops/: test_gated_delta_update.py  test_gather_mm.py  test_rms_norm.py  test_rope.py  test_sdpa.py
tests/compression/: test_compression.py
tests/debugging/: test_debug_info.py  test_inspector.py  test_validator.py
tests/ops/: test_custom_ops.py  test_ops.py  test_ops_ir.py
